Ixion: Fix alignfull group and cover blocks.

--- a/ixion/blocks.css
+++ b/ixion/blocks.css
@@ -175,6 +175,11 @@ p.has-drop-cap:not(:focus)::first-letter {
 	display: flex;
 }
 
+.wp-block-cover.alignfull .wp-block-cover__inner-container {
+	max-width: 712px;
+	margin: 0 auto;
+}
+
 /* File */
 
 .wp-block-file {
@@ -355,6 +360,13 @@ p.has-drop-cap:not(:focus)::first-letter {
 .entry-content .wp-block-button .wp-block-button__link:hover {
 	background: #c1a01e;
 	color: #fff;
+}
+
+/* Group */
+
+.wp-block-group.alignfull .wp-block-group__inner-container {
+	max-width: 712px;
+	margin: 0 auto;
 }
 
 /* Seperator */
